--- a/build.gradle
+++ b/build.gradle
@@ -10,7 +10,6 @@ repositories {
 }
 
 dependencies {
-
     // https://mvnrepository.com/artifact/junit/junit
     testImplementation group: 'junit', name: 'junit', version: '4.13.2'
    // https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-java
@@ -21,5 +20,6 @@ dependencies {
     implementation group: 'org.seleniumhq.selenium', name: 'selenium-chrome-driver', version: '4.1.1'
     // https://mvnrepository.com/artifact/commons-io/commons-io
     implementation group: 'commons-io', name: 'commons-io', version: '2.11.0'
-
+    // https://mvnrepository.com/artifact/org.apache.poi/poi
+    implementation group: 'org.apache.poi', name: 'poi', version: '5.2.0'
 }
